# libygg

./: .editorconfig  .gitignore  .packit.yaml  README.md  meson.build  meson_options.txt
.copr/: Makefile
.github/workflows/: doc.yml  package.yml  test.yml
examples/: meson.build
examples/echo/: com.redhat.Yggdrasil1.Worker1.echo.conf  com.redhat.Yggdrasil1.Worker1.echo.service.in  main.c  meson.build
examples/echo-py/: README.md  com.redhat.Yggdrasil1.Worker1.echo_py.conf  com.redhat.Yggdrasil1.Worker1.echo_py.service.in  main.py  meson.build
python/: README.md  pyproject.toml
python/src/gi-stubs/repository/: Ygg.pyi
src/: meson.build  test-ygg-metadata.c  test-ygg-worker.c  ygg-constants.h.in  ygg-metadata.c  ygg-metadata.h  ygg-version.h.in  ygg-worker.c  ygg-worker.h  ygg.h
