[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyGObject-Ygg-stubs"
authors = [
    {name = "CSI Client Tools", email = "csi-client-tools-bugs@redhat.com" },
]
description = "Stub files for Ygg GObject"
requires-python = ">=3.6"
version = "0.1.0"
dependencies = [
    "PyGObject-stubs",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
